--- a/translations/pl.json
+++ b/translations/pl.json
@@ -621,7 +621,7 @@
                 }
             },
             "page-onboarding": {
-                "intro": "Czy jesteś gotowy, aby obudzić swój dom, odzyskać prywatność i dołączyć do światowej społeczności majsterkowiczów?",
+                "intro": "Czy jesteś gotowy, aby obudzić swój dom, odzyskać prywatność i dołączyć do światowej społeczności pasjonatów automatyki domowej?",
                 "user": {
                     "intro": "Zacznijmy od utworzenia konta użytkownika.",
                     "required_field": "Wymagane",
