--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -774,7 +774,8 @@
             "hub": "Connected via",
             "firmware": "Firmware: {version}",
             "device_unavailable": "device unavailable",
-            "entity_unavailable": "entity unavailable"
+            "entity_unavailable": "entity unavailable",
+            "no_area": "No Area"
           }
         },
         "users": {
@@ -847,7 +848,8 @@
             "toggle_editor": "Toggle Editor",
             "add": "Add Card",
             "edit": "Edit",
-            "delete": "Delete"
+            "delete": "Delete",
+            "move": "Move"
           },
           "save_config": {
             "header": "Take control of your Lovelace UI",
@@ -956,6 +958,29 @@
           "working": "Please wait",
           "unknown_error": "Something went wrong",
           "providers": {
+            "command_line": {
+              "step": {
+                "init": {
+                  "data": {
+                    "username": "[%key:ui::panel::page-authorize::form::providers::homeassistant::step::init::data::username%]",
+                    "password": "[%key:ui::panel::page-authorize::form::providers::homeassistant::step::init::data::password%]"
+                  }
+                },
+                "mfa": {
+                  "data": {
+                    "code": "[%key:ui::panel::page-authorize::form::providers::homeassistant::step::mfa::data::code%]"
+                  },
+                  "description": "[%key:ui::panel::page-authorize::form::providers::homeassistant::step::mfa::description%]"
+                }
+              },
+              "error": {
+                "invalid_auth": "[%key:ui::panel::page-authorize::form::providers::homeassistant::error::invalid_auth%]",
+                "invalid_code": "[%key:ui::panel::page-authorize::form::providers::homeassistant::error::invalid_code%]"
+              },
+              "abort": {
+                "login_expired": "[%key:ui::panel::page-authorize::form::providers::homeassistant::abort::login_expired%]"
+              }
+            },
             "homeassistant": {
               "step": {
                 "init": {
