--- a/translations/pl.json
+++ b/translations/pl.json
@@ -732,7 +732,7 @@
                 }
             },
             "page-onboarding": {
-                "intro": "Czy jesteś gotowy, aby obudzić swój dom, odzyskać prywatność i dołączyć do światowej społeczności pasjonatów automatyki domowej?",
+                "intro": "Czy jesteś gotowy, aby ożywić swój dom, odzyskać prywatność i dołączyć do światowej społeczności pasjonatów automatyki domowej?",
                 "user": {
                     "intro": "Zacznijmy od utworzenia konta użytkownika.",
                     "required_field": "Wymagane",
@@ -789,10 +789,16 @@
                         "para_sure": "Czy na pewno chcesz przejąć kontrolę nad interfejsem użytkownika?",
                         "cancel": "Nieważne",
                         "save": "Przejmuję kontrolę"
+                    },
+                    "menu": {
+                        "raw_editor": "Ręczny edytor konfiguracji"
                     }
                 },
                 "menu": {
-                    "configure_ui": "Konfiguracja interfejsu użytkownika"
+                    "configure_ui": "Konfiguracja interfejsu użytkownika",
+                    "unused_entities": "Nieużywane encje",
+                    "help": "Pomoc",
+                    "refresh": "Odśwież"
                 }
             }
         },
