Revert "Merge branch 'master' of git://github.com/home-assistant/home-assistant-polymer into home-assistant-master"
This reverts commit 172471c7946e4dc528a94040f9caefeb265b7676.

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -345,31 +345,16 @@
                             "reloading": {
                                 "heading": "Recàrrega de la configuració",
                                 "introduction": "Algunes parts de la configuració de Home Assistant es poden recarregar sense necessitat de reiniciar-les. Les opcions de sota esborraran la configuració antiga i carregaran la nova.",
-                                "core": "Recarrega el nucli",
-                                "group": "Recarrega grups",
-                                "automation": "Recarrega automatismes",
-                                "script": "Recarrega programes"
+                                "core": "Recarregar el nucli",
+                                "group": "Recarregar grups",
+                                "automation": "Recarregar automatismes",
+                                "script": "Recarregar programes"
                             },
                             "server_management": {
                                 "heading": "Gestió del servidor",
                                 "introduction": "Controla el servidor de Home Assistant... des de Home Assistant.",
                                 "restart": "Reiniciar",
                                 "stop": "Aturar"
-                            },
-                            "core_config": {
-                                "edit_requires_storage": "L'editor està desactivat ja que la configuració es troba a configuration.yaml.",
-                                "location_name": "Nom de la instal·lació de Home Assistant",
-                                "latitude": "Latitud",
-                                "longitude": "Longitud",
-                                "elevation": "Altitud",
-                                "elevation_meters": "metres",
-                                "time_zone": "Zona horària",
-                                "unit_system": "Sistema d'unitats",
-                                "unit_system_imperial": "Imperial",
-                                "unit_system_metric": "Mètric",
-                                "imperial_example": "Fahrenheit, lliures",
-                                "metric_example": "Celsius, quilograms",
-                                "save_button": "Desa"
                             }
                         }
                     }
@@ -396,7 +381,7 @@
                     "editor": {
                         "introduction": "Utilitza els automatismes per donar més vida a la teva casa",
                         "default_name": "Nou automatisme",
-                        "save": "Desa",
+                        "save": "Desar",
                         "unsaved_confirm": "Hi ha canvis no desats. Segur que vols sortir?",
                         "alias": "Nom",
                         "triggers": {
@@ -560,9 +545,7 @@
                                 }
                             },
                             "learn_more": "Més informació sobre les accions"
-                        },
-                        "load_error_not_editable": "Només es poden editar les automatitzacions de l'arxiu automations.yaml.",
-                        "load_error_unknown": "Error en carregar l’automatització ({err_no})."
+                        }
                     }
                 },
                 "script": {
@@ -883,14 +866,6 @@
                     "intro": "Els dispositius i serveis es representen a Home Assistant com a integracions. Pots configurar-los ara o més tard des de la pàgina de configuració.",
                     "more_integrations": "Més",
                     "finish": "Finalitza"
-                },
-                "core-config": {
-                    "intro": "Hola {name}, benvingut\/uda a Home Assistant. Quin nom t'agradaria posar a la teva casa?",
-                    "intro_location": "Voldirem saber la zona on vius. Aquesta informació servirà per poder mostrar certa informació i configurar automatitzacions relatives a la posició del sol. Aquestes dades mai es compartiran fora de la teva xarxa personal.",
-                    "intro_location_detect": "Et podem ajudar a completar aquesta informació fent una única sol·licitud a un servei extern.",
-                    "location_name_default": "Casa",
-                    "button_detect": "Detecta",
-                    "finish": "Següent"
                 }
             },
             "lovelace": {
@@ -917,7 +892,7 @@
                 "editor": {
                     "edit_card": {
                         "header": "Targeta de Configuració",
-                        "save": "Desa",
+                        "save": "Desar",
                         "toggle_editor": "Commutar l'editor",
                         "pick_card": "Tria la targeta que vols afegir.",
                         "add": "Afegir targeta",
@@ -950,7 +925,7 @@
                     },
                     "raw_editor": {
                         "header": "Edita la configuració",
-                        "save": "Desa",
+                        "save": "Desar",
                         "unsaved_changes": "Canvis sense desar",
                         "saved": "Desat"
                     }
@@ -964,12 +939,7 @@
                 "warning": {
                     "entity_not_found": "Entitat no disponible: {entity}",
                     "entity_non_numeric": "Entitat no numèrica: {entity}"
-                },
-                "changed_toast": {
-                    "message": "S'ha actualitzat la configuració de Lovelace, vols refrescar-ho?",
-                    "refresh": "Actualitza"
-                },
-                "reload_lovelace": "Recarrega Lovelace"
+                }
             }
         },
         "sidebar": {
@@ -980,7 +950,7 @@
         "common": {
             "loading": "Carregant",
             "cancel": "Cancel·la",
-            "save": "Desa"
+            "save": "Desar"
         },
         "duration": {
             "day": "{count} {count, plural,\n  one {dia}\n  other {dies}\n}",
@@ -1137,7 +1107,7 @@
         },
         "dialogs": {
             "more_info_settings": {
-                "save": "Desa",
+                "save": "Desar",
                 "name": "Substitució de Nom",
                 "entity_id": "ID de l'entitat"
             },
@@ -1158,7 +1128,7 @@
         "auth_store": {
             "ask": "Voleu desar aquest inici de sessió?",
             "decline": "No, gràcies",
-            "confirm": "Desa inici de sessió"
+            "confirm": "Desar inici de sessió"
         },
         "notification_drawer": {
             "click_to_configure": "Prem el botó per configurar {entity}",
