--- a/translations/el.json
+++ b/translations/el.json
@@ -603,12 +603,6 @@
                         "device_unavailable": "συσκευή μη διαθέσιμη",
                         "entity_unavailable": "οντότητα μη διαθέσιμη",
                         "no_area": "Καμία περιοχή"
-                    },
-                    "config_flow": {
-                        "external_step": {
-                            "description": "Αυτό το βήμα απαιτεί να επισκεφτείτε μια εξωτερική ιστοσελίδα για να ολοκληρωθεί.",
-                            "open_site": "Άνοιγμα ιστότοπου"
-                        }
                     }
                 },
                 "zha": {
@@ -861,11 +855,6 @@
                         "required_fields": "Συμπληρώστε όλα τα υποχρεωτικά πεδία",
                         "password_not_match": "Οι κωδικοί πρόσβασης δεν ταιριάζουν"
                     }
-                },
-                "integration": {
-                    "intro": "Οι συσκευές και οι υπηρεσίες εκπροσωπούνται στο Home Assistant ως ενσωματώσεις. Μπορείτε να τα ρυθμίσετε τώρα ή αργότερα από την οθόνη διαμόρφωσης.",
-                    "more_integrations": "Περισσότερα",
-                    "finish": "Τέλος"
                 }
             },
             "lovelace": {
@@ -879,14 +868,6 @@
                         "title": "Καλωσορίσατε στην αρχική σελίδα",
                         "no_devices": "Αυτή η σελίδα σάς επιτρέπει να ελέγχετε τις συσκευές σας, ωστόσο φαίνεται ότι δεν έχετε ακόμα ρυθμίσει συσκευές. Μεταβείτε στη σελίδα ενοποίησης για να ξεκινήσετε.",
                         "go_to_integrations_page": "Μεταβείτε στη σελίδα ενοποίησης."
-                    },
-                    "picture-elements": {
-                        "hold": "Αναστολή:",
-                        "tap": "Ταπ:",
-                        "navigate_to": "Μεταβείτε στην {location}",
-                        "toggle": "Εναλλαγή {name}",
-                        "call_service": "Κλήση υπηρεσίας {name}",
-                        "more_info": "Εμφάνιση περισσότερων πληροφοριών: {name}"
                     }
                 },
                 "editor": {
@@ -944,8 +925,7 @@
         },
         "sidebar": {
             "log_out": "Αποσύνδεση",
-            "developer_tools": "Εργαλεία προγραμματιστή",
-            "external_app_configuration": "Διαμόρφωση Εφαρμογής"
+            "developer_tools": "Εργαλεία προγραμματιστή"
         },
         "common": {
             "loading": "Φόρτωση",
