--- a/translations/et.json
+++ b/translations/et.json
@@ -279,8 +279,7 @@
     "state_badge": {
         "default": {
             "unknown": "?",
-            "unavailable": "Kadunud",
-            "error": "Viga"
+            "unavailable": "Kadunud"
         },
         "alarm_control_panel": {
             "armed": "Valves",
@@ -354,20 +353,6 @@
                                 "introduction": "Kontrolli oma Home Assistant serverit... Home Assistant-ist.",
                                 "restart": "Taaskäivita",
                                 "stop": "Peata"
-                            },
-                            "core_config": {
-                                "location_name": "Sinu Home Assistant paigalduse nimi",
-                                "latitude": "Laius",
-                                "longitude": "Pikkus",
-                                "elevation": "Kõrgus",
-                                "elevation_meters": "meetrit",
-                                "time_zone": "Ajavöönd",
-                                "unit_system": "Ühikute süsteem",
-                                "unit_system_imperial": "Imperiaalne süsteem",
-                                "unit_system_metric": "Meetermõõdustik",
-                                "imperial_example": "Fahrenheit, naelad",
-                                "metric_example": "Celsius, kilogrammid",
-                                "save_button": "Salvesta"
                             }
                         }
                     }
@@ -384,7 +369,7 @@
                     "description": "Loo ja redigeeri automatiseeringuid",
                     "picker": {
                         "header": "Automaatika redaktor",
-                        "introduction": "Automaatika redaktor võimaldab teil luua ja muuta automatiseeringuid. Palun järgige allolevat linki, veendumaks, et oled Home Assistant-i õigesti seadistanud.",
+                        "introduction": "Automaatika redaktor võimaldab teil luua ja muuta automatiseeringuid. Palun loe läbi [kasutusjuhend](https:\/\/home-assistant.io\/docs\/automation\/editor\/), veendumaks, et oled Home Assistant-i õigesti seadistanud.",
                         "pick_automation": "Vali muudetav automatiseering",
                         "no_automations": "Me ei leidnud ühtegi muudetavat automatiseeringut",
                         "add_automation": "Lisa automatiseering",
@@ -398,7 +383,7 @@
                         "alias": "Nimi",
                         "triggers": {
                             "header": "Päästikud",
-                            "introduction": "Päästikud on need, millest algab automatiseeringu töö. Ühe automatiseeringu jaoks on võimalik määrata mitu päästikut. Kui päästik vallandub, kontrollib Home Assistant võimalike tingimuste täidetust ja käivitab tegevuse.",
+                            "introduction": "Päästikud on need, millest algab automatiseeringu töö. Ühe automatiseeringu jaoks on võimalik määrata mitu päästikut. Kui päästik vallandub, kontrollib Home Assistant võimalike tingimuste täidetust ja käivitab tegevuse.\n\n[Lisateave päästikutest.](https:\/\/home-assistant.io\/docs\/automation\/trigger\/)",
                             "add": "Lisa päästik",
                             "duplicate": "Paljunda",
                             "delete": "Kustuta",
@@ -480,7 +465,7 @@
                         },
                         "conditions": {
                             "header": "Tingimused",
-                            "introduction": "Tingimused on automatiseeringu valikuline osa ja neid saab kasutada, et vältida tegevuse käivitumist päästiku vallandumisel. Tingimused tunduvad väga sarnased päästikutele, kuid on siiski erinevad. Päästik jälgib süsteemis toimuvaid sündmusi, tingimus jälgib ainult süsteem praegust olekut. Päästik võib märgata, et lülitit ollakse parasjagu lülitamas. Tingimus võib näha ainult seda, kas lüliti on praegu sisse või välja lülitatud.",
+                            "introduction": "Tingimused on automatiseeringu valikuline osa ja neid saab kasutada, et vältida tegevuse käivitumist päästiku vallandumisel. Tingimused tunduvad väga sarnased päästikutele, kuid on siiski erinevad. Päästik jälgib süsteemis toimuvaid sündmusi, tingimus jälgib ainult süsteem praegust olekut. Päästik võib märgata, et lülitit ollakse parasjagu lülitamas. Tingimus võib näha ainult seda, kas lüliti on praegu sisse või välja lülitatud. \n\n [Lisateave tingimustest.](https:\/\/home-assistant.io\/docs\/scripts\/conditions\/)",
                             "add": "Lisa tingimus",
                             "duplicate": "Duubelda",
                             "delete": "Kustuta",
@@ -526,7 +511,7 @@
                         },
                         "actions": {
                             "header": "Tegevused",
-                            "introduction": "Tegevused on need, mida Home Assistant teeb kui päästik käivitab automatiseeringu.",
+                            "introduction": "Tegevused on need, mida Home Assistant teeb kui päästik käivitab automatiseeringu.\n\n[Lisateave tegevustest.](https:\/\/home-assistant.io\/docs\/automation\/action\/)",
                             "add": "Lisa toiming",
                             "duplicate": "Paljunda",
                             "delete": "Kustuta",
@@ -617,10 +602,7 @@
                     }
                 },
                 "zha": {
-                    "caption": "ZHA",
-                    "device_card": {
-                        "area_picker_label": "Ala"
-                    }
+                    "caption": "ZHA"
                 },
                 "area_registry": {
                     "caption": "Alade register",
@@ -840,18 +822,6 @@
                         "required_fields": "Täida kõik nõutud väljad",
                         "password_not_match": "Salasõnad ei ühti"
                     }
-                },
-                "integration": {
-                    "more_integrations": "Rohkem",
-                    "finish": "Lõpeta"
-                },
-                "core-config": {
-                    "intro": "Tere tulemast Home Assistant'i kasutama, {name}. Kuidas sa soovid oma kodu nimetada?",
-                    "intro_location": "Soovime teada, kus sa elad. See teave aitab informatsiooni kuvamisel ja päikesepõhiste automatiseeringute loomisel. Neid andmeid ei jagata kunagi väljaspool teie võrku.",
-                    "intro_location_detect": "Me saame aidata sul seda teavet leida, tehes ühekordse päringu välisele teenusele.",
-                    "location_name_default": "Kodu",
-                    "button_detect": "Tuvasta",
-                    "finish": "Edasi"
                 }
             },
             "lovelace": {
