--- a/translations/he.json
+++ b/translations/he.json
@@ -279,9 +279,7 @@
     "state_badge": {
         "default": {
             "unknown": "לא ידוע",
-            "unavailable": "לא זמין",
-            "error": "שגיאה",
-            "entity_not_found": "ישות לא נמצאה"
+            "unavailable": "לא זמין"
         },
         "alarm_control_panel": {
             "armed": "מופעל",
@@ -293,7 +291,7 @@
             "arming": "דורך",
             "disarming": "מבטל",
             "triggered": "מופעל",
-            "armed_custom_bypass": "מופעל"
+            "armed_custom_bypass": "דרוך"
         },
         "device_tracker": {
             "home": "בבית",
@@ -355,21 +353,6 @@
                                 "introduction": "לשלוט על שרת הHome Assistant שלך... מHome Assistant.",
                                 "restart": "הפעלה מחדש",
                                 "stop": "עצור"
-                            },
-                            "core_config": {
-                                "edit_requires_storage": "עורך מושבת משום שתצורה מאוחסנת ב- configuration.yaml.",
-                                "location_name": "שם ההתקנה של הבית שלך",
-                                "latitude": "קו רוחב",
-                                "longitude": "קו אורך",
-                                "elevation": "גובה",
-                                "elevation_meters": "מטר",
-                                "time_zone": "איזור זמן",
-                                "unit_system": "יחידת מידה",
-                                "unit_system_imperial": "אימפריאלי",
-                                "unit_system_metric": "מטרי",
-                                "imperial_example": "פרנהייט, פאונד",
-                                "metric_example": "צלזיוס, ק\"ג",
-                                "save_button": "שמור"
                             }
                         }
                     }
@@ -560,9 +543,7 @@
                                 }
                             },
                             "learn_more": "למד עוד על פעולות"
-                        },
-                        "load_error_not_editable": "רק אוטומציה ב automations.yaml ניתנים לעריכה.",
-                        "load_error_unknown": "שגיאה בטעינת האוטומציה ( {err_no} )."
+                        }
                     }
                 },
                 "script": {
@@ -598,8 +579,7 @@
                 "cloud": {
                     "caption": "ענן Home Assistant",
                     "description_login": "מחובר בתור {email} מה",
-                    "description_not_login": "לא מחובר",
-                    "description_features": "שליטה הרחק מהבית, משתלב עם Alexa ו Google Assistant."
+                    "description_not_login": "לא מחובר"
                 },
                 "integrations": {
                     "caption": "אינטגרציות",
@@ -620,12 +600,6 @@
                         "device_unavailable": "התקן אינו זמין",
                         "entity_unavailable": "ישות לא זמינה",
                         "no_area": "ללא אזור"
-                    },
-                    "config_flow": {
-                        "external_step": {
-                            "description": "שלב זה מחייב אותך לבקר באתר אינטרנט חיצוני להשלמת הפעולה.",
-                            "open_site": "פתח אתר"
-                        }
                     }
                 },
                 "zha": {
@@ -633,18 +607,7 @@
                     "description": "ניהול רשת Zigbee לאוטומציה ביתית",
                     "services": {
                         "reconfigure": "התקן מחדש את התקן ה ZHA. השתמש באפשרות זו אם אתה נתקל בבעיות בהתקן. אם ההתקן המדובר הוא התקן המופעל באמצעות סוללות, ודא שהוא ער ויכול לקבל פקודות בעת שימוש בשירות זה.",
-                        "updateDeviceName": "הגדר שם מותאם אישית עבור התקן זה במאגר ההתקנים.",
-                        "remove": "הסר התקן מרשת ZigBee."
-                    },
-                    "device_card": {
-                        "device_name_placeholder": "שם פרטי",
-                        "area_picker_label": "אזור",
-                        "update_name_button": "עדכן שם"
-                    },
-                    "add_device_page": {
-                        "header": "אוטומציית Zigbee - הוספת התקנים",
-                        "spinner": "מחפש מכשירי ZHA Zigbee...",
-                        "discovery_text": ". המכשירים שהתגלו יופיעו כאן. עקוב אחר ההוראות עבור ההתקנים שלך והצב את ההתקנים במצב תיאום."
+                        "updateDeviceName": "הגדר שם מותאם אישית עבור התקן זה במאגר ההתקנים."
                     }
                 },
                 "area_registry": {
@@ -878,19 +841,6 @@
                         "required_fields": "מלא את כל השדות הדרושים",
                         "password_not_match": "הסיסמאות אינן תואמות"
                     }
-                },
-                "integration": {
-                    "intro": "התקנים ושירותים מיוצגים ב- Home Assistant כאינטגרציות. באפשרותך להגדיר אותם כעת, או לעשות זאת מאוחר יותר ממסך התצורה.",
-                    "more_integrations": "עוד",
-                    "finish": "סיום"
-                },
-                "core-config": {
-                    "intro": "שלום {name} , ברוך הבא ל- Home Assistant. איך היית רוצה את שם הבית שלך?",
-                    "intro_location": "אנחנו רוצים לדעת איפה אתה גר. מידע זה יעזור עם הצגת מידע והגדרת אוטומציה מבוססת שמש. נתונים אלה לעולם אינם משותפים מחוץ לרשת שלך.",
-                    "intro_location_detect": "אנו יכולים לעזור לך למלא מידע זה על ידי ביצוע בקשה חד פעמית לשירות חיצוני.",
-                    "location_name_default": "בית",
-                    "button_detect": "לזהות",
-                    "finish": "הבא"
                 }
             },
             "lovelace": {
@@ -904,14 +854,6 @@
                         "title": "ברוך הבא הביתה",
                         "no_devices": "דף זה מאפשר לך לשלוט במכשירים שלך, אך נראה שעדיין לא הוגדרו מכשירים. עבור אל דף האינטגרציות כדי להתחיל.",
                         "go_to_integrations_page": "עבור אל דף האינטגרציות."
-                    },
-                    "picture-elements": {
-                        "hold": "החזק:",
-                        "tap": "הקש:",
-                        "navigate_to": "נווט אל {location}",
-                        "toggle": "החלף מצב {name}",
-                        "call_service": "קריאה לשירות {name}",
-                        "more_info": "הצג מידע נוסף: {name}"
                     }
                 },
                 "editor": {
@@ -964,18 +906,12 @@
                 "warning": {
                     "entity_not_found": "הישות אינה זמינה: {entity}",
                     "entity_non_numeric": "הישות אינה מספרית: {entity}"
-                },
-                "changed_toast": {
-                    "message": "תצורת Lovelace עודכנה, האם ברצונך לרענן?",
-                    "refresh": "רענן"
-                },
-                "reload_lovelace": "טען מחדש את Lovelace"
+                }
             }
         },
         "sidebar": {
             "log_out": "התנתק",
-            "developer_tools": "כלים למפתחים",
-            "external_app_configuration": "הגדרות היישום"
+            "developer_tools": "כלים למפתחים"
         },
         "common": {
             "loading": "טוען",
