--- a/translations/id.json
+++ b/translations/id.json
@@ -264,10 +264,6 @@
             "on": "Menyala",
             "paused": "Berhenti",
             "returning": "Kembali ke dock"
-        },
-        "person": {
-            "home": "Di rumah",
-            "not_home": "Mode jauh"
         }
     },
     "state_badge": {
@@ -347,9 +343,6 @@
                                 "introduction": "Kontrol server Home Assistant anda ... dari Home Assistant.",
                                 "restart": "Ulang kembali",
                                 "stop": "Berhenti"
-                            },
-                            "core_config": {
-                                "save_button": "Simpan"
                             }
                         }
                     }
@@ -580,12 +573,7 @@
                     "configured": "Terkonfigurasi",
                     "new": "Mengatur integrasi baru",
                     "configure": "Konfigurasi",
-                    "none": "Belum ada yang dikonfigurasi",
-                    "config_flow": {
-                        "external_step": {
-                            "open_site": "Buka situs web"
-                        }
-                    }
+                    "none": "Belum ada yang dikonfigurasi"
                 },
                 "area_registry": {
                     "caption": "Registry Area",
@@ -603,16 +591,6 @@
                         "create": "MEMBUAT"
                     }
                 },
-                "entity_registry": {
-                    "description": "Ikhtisar semua entitas yang dikenal.",
-                    "editor": {
-                        "delete": "HAPUS",
-                        "update": "UPDATE"
-                    },
-                    "picker": {
-                        "integrations_page": "Halaman integrasi"
-                    }
-                },
                 "person": {
                     "caption": "Orang",
                     "description": "Kelola orang yang Home Assistant lacak",
@@ -621,11 +599,6 @@
                         "device_tracker_intro": "Pilih perangkat milik orang ini.",
                         "device_tracker_picked": "Lacak Perangkat",
                         "device_tracker_pick": "Pilih perangkat untuk dilacak"
-                    }
-                },
-                "zha": {
-                    "device_card": {
-                        "update_name_button": "Perbarui Nama"
                     }
                 }
             },
@@ -763,50 +736,12 @@
                     "error": {
                         "required_fields": "Isi semua bidang yang wajib diisi"
                     }
-                },
-                "integration": {
-                    "finish": "Selesai"
-                },
-                "core-config": {
-                    "intro": "Halo {name} , selamat datang di Asisten Rumah. Bagaimana Anda ingin memberi nama rumah Anda?",
-                    "intro_location_detect": "Kami dapat membantu Anda mengisi informasi ini dengan membuat permintaan satu kali ke layanan eksternal.",
-                    "location_name_default": "Beranda",
-                    "button_detect": "Deteksi",
-                    "finish": "Berikutnya"
-                }
-            },
-            "lovelace": {
-                "editor": {
-                    "edit_card": {
-                        "edit": "Edit",
-                        "delete": "Hapus"
-                    },
-                    "save_config": {
-                        "para_sure": "Apakah Anda yakin ingin mengendalikan antarmuka pengguna Anda?"
-                    },
-                    "raw_editor": {
-                        "header": "Edit Konfigurasi",
-                        "save": "Simpan",
-                        "unsaved_changes": "Perubahan yang belum disimpan",
-                        "saved": "Disimpan"
-                    }
-                },
-                "cards": {
-                    "empty_state": {
-                        "title": "Selamat datang di rumah",
-                        "no_devices": "Halaman ini memungkinkan Anda untuk mengontrol perangkat Anda, namun sepertinya Anda belum mengatur perangkat. Buka halaman integrasi untuk memulai.",
-                        "go_to_integrations_page": "Buka halaman integrasi."
-                    },
-                    "picture-elements": {
-                        "more_info": "Tampilkan lebih banyak info: {name}"
-                    }
                 }
             }
         },
         "sidebar": {
             "log_out": "Keluar",
-            "developer_tools": "Alat pengembang",
-            "external_app_configuration": "Konfigurasi Aplikasi"
+            "developer_tools": "Alat pengembang"
         },
         "common": {
             "loading": "Memuat",
@@ -973,8 +908,7 @@
                 },
                 "sun": {
                     "elevation": "Ketinggian",
-                    "rising": "Terbit",
-                    "setting": "Pengaturan"
+                    "rising": "Terbit"
                 },
                 "updater": {
                     "title": "Petunjuk Pembaruan"
@@ -1028,8 +962,7 @@
         "updater": "Updater",
         "weblink": "Tautan web",
         "zwave": "Z-Wave",
-        "vacuum": "Vakum",
-        "person": "Orang"
+        "vacuum": "Vakum"
     },
     "attribute": {
         "weather": {
@@ -1037,9 +970,5 @@
             "visibility": "Jarak pandang",
             "wind_speed": "Kecepatan angin"
         }
-    },
-    "groups": {
-        "system-admin": "Administrator",
-        "system-users": "Pengguna"
     }
 }
