--- a/translations/nb.json
+++ b/translations/nb.json
@@ -355,21 +355,6 @@
                                 "introduction": "Kontroller din Home Assistant server... fra Home Assistant.",
                                 "restart": "Start på nytt",
                                 "stop": "Stopp"
-                            },
-                            "core_config": {
-                                "edit_requires_storage": "Redigering deaktivert da konfigurasjonen er lagret i configuration.yaml.",
-                                "location_name": "Navn på installasjonen av Home Assistant",
-                                "latitude": "Breddegrad",
-                                "longitude": "Lengdegrad",
-                                "elevation": "Høyde",
-                                "elevation_meters": "meter",
-                                "time_zone": "Tidssone",
-                                "unit_system": "Enhetssystem",
-                                "unit_system_imperial": "Imperisk",
-                                "unit_system_metric": "Metrisk",
-                                "imperial_example": "Fahrenheit, pund",
-                                "metric_example": "Celsius, kilogram",
-                                "save_button": "Lagre"
                             }
                         }
                     }
@@ -560,9 +545,7 @@
                                 }
                             },
                             "learn_more": "Lær mer om handlinger"
-                        },
-                        "load_error_not_editable": "Kun automatiseringer i automations.yaml kan redigeres.",
-                        "load_error_unknown": "Feil ved lasting av automatisering ( {err_no} )."
+                        }
                     }
                 },
                 "script": {
@@ -619,7 +602,7 @@
                         "firmware": "Fastvare: {version}",
                         "device_unavailable": "enheten er utilgjengelig",
                         "entity_unavailable": "oppføringen er utilgjengelig",
-                        "no_area": "Intet område"
+                        "no_area": "Ingen område"
                     },
                     "config_flow": {
                         "external_step": {
@@ -637,14 +620,14 @@
                         "remove": "Fjern en enhet fra ZigBee-nettverket."
                     },
                     "device_card": {
-                        "device_name_placeholder": "Brukers navn",
+                        "device_name_placeholder": "Brukerdefinert navn",
                         "area_picker_label": "Område",
-                        "update_name_button": "Oppdatér navn"
+                        "update_name_button": "Oppdater navn"
                     },
                     "add_device_page": {
                         "header": "ZigBee Home Automation - Legg til enheter",
-                        "spinner": "Søker etter ZHA Zigbee-enheter...",
-                        "discovery_text": "Oppdagede enheter vises her. Følg instruksjonene for enheten(e) og sett enheten(e) i paringsmodus."
+                        "spinner": "Søker etter ZHA Zigbee enheter...",
+                        "discovery_text": "Oppdagede enheter vises her. Følg instruksjonene for enheten(e) og sett enheten(e) i parringsmodus."
                     }
                 },
                 "area_registry": {
@@ -673,7 +656,7 @@
                     "picker": {
                         "header": "Enhetsregister",
                         "unavailable": "(utilgjengelig)",
-                        "introduction": "Home Assistant bygger opp et register over hver enhet den har sett som kan identifiseres unikt. Hver av disse enhetene vil ha en enhets-ID tilknyttet som vil bli reservert for bare denne enheten.",
+                        "introduction": "Home Assistant beholder et register over hver enhet som den noensinne har sett som kan identifiseres unikt. Hver av disse enhetene vil ha en enhets ID tilknyttet som vil bli reservert for bare denne enheten.",
                         "introduction2": "Bruk entitetsregisteret for å overskrive navnet, endre enhets ID eller fjern oppføringen fra Home Assistant. Merk at fjerning av enhetsregisteroppføringer ikke fjerner enheten. For å gjøre det, følg linken under og fjern den fra integrasjonssiden.",
                         "integrations_page": "Integrasjonsside"
                     },
@@ -880,17 +863,9 @@
                     }
                 },
                 "integration": {
-                    "intro": "Enheter og tjenester er representert i Home Assistant som integrasjoner. Du kan sette dem opp nå eller gjøre det senere fra konfigurasjonen.",
+                    "intro": "Enheter og tjenester er representert i Home Assistant som integrasjoner. Du kan sette dem opp nå, eller gjøre det senere fra konfigurasjonen skjermen.",
                     "more_integrations": "Mer",
                     "finish": "Fullfør"
-                },
-                "core-config": {
-                    "intro": "Hei {Name}, velkommen til Home Assistant. Hva ønsker du å kalle hjemmet ditt?",
-                    "intro_location": "Vi vil gjerne vite hvor du bor. Denne informasjonen vil bidra til å vise informasjon og sette opp solbaserte automatiseringer. Denne dataen deles ikke utenfor nettverket ditt.",
-                    "intro_location_detect": "Vi kan hjelpe deg med å fylle ut denne informasjonen ved å gjøre en engangsforespørsel til en ekstern tjeneste.",
-                    "location_name_default": "Hjem",
-                    "button_detect": "Oppdag",
-                    "finish": "Neste"
                 }
             },
             "lovelace": {
@@ -910,7 +885,7 @@
                         "tap": "Trykk:",
                         "navigate_to": "Naviger til {location}",
                         "toggle": "Veksle {name}",
-                        "call_service": "Tjenestekall {navn}",
+                        "call_service": "Kall tjeneste {navn}",
                         "more_info": "Vis mer info: {name}"
                     }
                 },
@@ -964,12 +939,7 @@
                 "warning": {
                     "entity_not_found": "Enhet ikke tilgjengelig: {entity}",
                     "entity_non_numeric": "Enheten er ikke-numerisk: {entity}"
-                },
-                "changed_toast": {
-                    "message": "Lovelace-konfigurasjonen ble oppdatert, ønsker du å oppdatere?",
-                    "refresh": "Oppdatere"
-                },
-                "reload_lovelace": "Laste Lovelace på nytt"
+                }
             }
         },
         "sidebar": {
@@ -1041,7 +1011,7 @@
                 "disarm": "Deaktiver",
                 "arm_home": "Armer hjemme",
                 "arm_away": "Armer borte",
-                "arm_night": "Aktiver natt",
+                "arm_night": "Armer natt",
                 "armed_custom_bypass": "Tilpasset bypass",
                 "arm_custom_bypass": "Tilpasset bypass"
             },
@@ -1147,8 +1117,8 @@
                 },
                 "sun": {
                     "elevation": "Elevasjon",
-                    "rising": "Soloppgang",
-                    "setting": "Solnedgang"
+                    "rising": "Stiger",
+                    "setting": "Innstilling"
                 },
                 "updater": {
                     "title": "Oppdateringsanvisning"
@@ -1229,6 +1199,6 @@
     "groups": {
         "system-admin": "Administratorer",
         "system-users": "Brukere",
-        "system-read-only": "Brukere med lesetilgang"
+        "system-read-only": "Lesetilgang brukere"
     }
 }
