--- a/translations/pl.json
+++ b/translations/pl.json
@@ -2423,7 +2423,7 @@
                     "dropdown_label": "Motyw",
                     "error_no_theme": "Brak dostępnych motywów.",
                     "header": "Motyw",
-                    "link_promo": "Dowiedz się więcej o motywch"
+                    "link_promo": "Dowiedz się więcej o motywach"
                 },
                 "vibrate": {
                     "description": "Włącz lub wyłącz wibracje na tym urządzeniu podczas sterowania urządzeniami.",
