--- a/translations/en.json
+++ b/translations/en.json
@@ -1505,6 +1505,38 @@
                     "description": "Manage your devices with AIS dom software"
                 },
                 "introduction": "Here it is possible to configure your components and Home Assistant. Not everything is possible to configure from the UI yet, but we're working on it.",
+                "ais_dom_config_update": {
+                    "caption": "Gateway software",
+                    "description": "System update, backup and synchronization with the Integrator Portal"
+                  },
+                  "ais_dom_config_wifi": {
+                    "caption": "WiFi network",
+                    "description": "WiFi connection settings"
+                  },
+                  "ais_dom_config_display": {
+                    "caption": "Screen",
+                    "description": "Screen Settings"
+                  },
+                  "ais_dom_config_tts": {
+                    "caption": "The assistant voice",
+                    "description": "Voice assistant settings"
+                  },
+                  "ais_dom_config_night": {
+                    "caption": "Night mode",
+                    "description": "Set the hours when the assistant should be quieter"
+                  },
+                  "ais_dom_config_remote": {
+                    "caption": "Remote control",
+                    "description": "Configuration of remote access to the gateway"
+                  },
+                  "ais_dom_config_logs": {
+                    "caption": "Logs and recorder",
+                    "description": "Configuration of logs and DB recorder"
+                  },
+                  "ais_dom_config_power": {
+                    "caption": "Stop the Gate",
+                    "description": "Restart or turn off the gate"
+                  },
                 "lovelace": {
                     "caption": "Lovelace Dashboards",
                     "dashboards": {
