--- a/translations/pl.json
+++ b/translations/pl.json
@@ -1531,7 +1531,7 @@
                   },
                   "ais_dom_config_logs": {
                     "caption": "Logi i baza danych",
-                    "description": "Konfiguracja logów i rejestratora DB"
+                    "description": "Konfiguracja logów i zapisu zdarzeń do bazy danych"
                   },
                   "ais_dom_config_power": {
                     "caption": "Zatrzymanie bramki",
